# astroguessr

./: .gitignore  README.md  main.py  pyproject.toml
assets/: climbing.mov
frontend/: index.html  main.js
